tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/node/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


==== DifferentNamesNotSpecified/tsconfig.json (2 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
                           ~~~~~
!!! error TS5101: Flag 'out' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
                           ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
    }
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;